--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "express": "^4.17.1",
-    "mongoose": "^5.9.10",
+    "express": "^4.18.2",
+    "mongoose": "6.8.0",
     "promise": "^8.1.0",
-    "pug": "^3.0.1"
+    "pug": "^3.0.1",
+    "ws": "^8.12.0"
   }
 }
